infra/k8s/orders-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-depl
spec:
  # replicas: 1 # Google cloud throws warning when set to 1. Set to 3 to avoid those warnings
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders # NOTE: Context
          image: oldledger/ticketing-orders # TODO: Use skaffold profiles instead of manual switch
          # image: us.gcr.io/ticketing-dev-308807/orders
          resources:
            limits:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: orders-srv
  labels:
    app: orders
    service: orders-srv
spec:
  selector:
    app: orders
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
