infra/k8s/payments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-depl
spec:
  # replicas: 1 # Google cloud throws warning when set to 1. Set to 3 to avoid those warnings
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
        - name: payments # NOTE: Context
          image: oldledger/ticketing-payments # TODO: Use skaffold profiles instead of manual switch
          # image: us.gcr.io/ticketing-dev-308807/payments
          resources:
            limits:
              memory: "256Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: payments-srv
  labels:
    app: payments
    service: payments-srv
spec:
  selector:
    app: payments
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
